# homecmdr-cli

./: Cargo.toml  README.md  install.sh  teardown.md
.github/workflows/: release.yml
src/: main.rs  workspace.rs
src/commands/: build.rs  config_sync.rs  init.rs  mod.rs  pull.rs  rebuild.rs
src/commands/adapter/: add.rs  list.rs  remove.rs
src/commands/plugin/: add.rs  list.rs  remove.rs
src/commands/service/: install.rs  manage.rs  mod.rs
