[package]
name = "homecmdr-cli"
version = "0.1.0"
edition = "2021"
description = "HomeCmdr CLI — manage adapters for your HomeCmdr workspace"

[[bin]]
name = "homecmdr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zip = "2"
