[package]
name = "homecmdr-cli"
version = "0.2.0"
edition = "2021"
description = "HomeCmdr CLI — install, manage adapters, and deploy your HomeCmdr instance"

[[bin]]
name = "homecmdr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zip = "2"
